--- a/styles/main.scss
+++ b/styles/main.scss
@@ -178,7 +178,7 @@ input.text-white:focus, textarea.text-white:focus {
   }
 }
 
-.modal-open > .container {
+.modal-open > #__next {
   filter: blur(2px);
 }
 
