set footer logo clickable

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -197,3 +197,7 @@ input.text-white:focus, textarea.text-white:focus {
 button:focus {
   outline: 0;
 }
+
+.cursor-pointer {
+  cursor: pointer;
+}
