correct search page, correct post page

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -15,6 +15,11 @@ $theme-colors: (
        "blue": #B8CCE7
 );
 
+$spacers: (
+        6: (10rem),
+        7: (12rem)
+);
+
 $spacer: 1.5rem;
 
 $border-color: #000;
