add graphic objects for article content

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -2,6 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400&display=swap');
 @import url('./icons/icons.css');
+
 $enable-rounded: false;
 $enable-responsive-font-sizes: true;
 
@@ -205,4 +206,10 @@ button:focus {
 
 .cursor-pointer {
   cursor: pointer;
+}
+
+.BrainhubCarouselItem {
+  &:not(.BrainhubCarouselItem--active) {
+    opacity: 0.5;
+  }
 }
