--- a/styles/main.scss
+++ b/styles/main.scss
@@ -214,6 +214,18 @@ button:focus {
       opacity: 0.5;
       transform: scale(0.9);
     }
+    //&.BrainhubCarouselItem--active::before {
+    //  position: absolute;
+    //  background-color: black;
+    //  opacity: 0.6;
+    //  top: 0;
+    //  right: 0;
+    //  width: 50px;
+    //  height: 50px;
+    //  border-radius: 50%;
+    //  content: 'a';
+    //  color: white;
+    //}
   }
 
   .BrainhubCarousel__arrows {
