corrections in category

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -47,6 +47,7 @@ $badge-font-size: 14px;
 $card-border-width: 0;
 $card-cap-bg: transparent;
 $card-bg: transparent;
+$card-spacer-x: 2rem;
 
 $navbar-padding-y: 7px;
 $navbar-toggler-padding-y: 0;
