--- a/styles/main.scss
+++ b/styles/main.scss
@@ -189,7 +189,7 @@ input.text-white:focus, textarea.text-white:focus {
   filter: blur(2px);
 }
 
-#__next {
+.bg-body {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -224,6 +224,11 @@ button:focus {
 
 .cursor-pointer {
   cursor: pointer;
+}
+
+.sticky-right {
+  right: 0;
+  z-index: 2;
 }
 
 .BrainhubCarousel {
