--- a/styles/icons/icons.css
+++ b/styles/icons/icons.css
@@ -76,3 +76,15 @@
 .icon-fullscreen-close:before {
   content: "\e910";
 }
+.icon-arrow-up:before {
+  content: "\ea3a";
+}
+.icon-arrow-down:before {
+  content: "\ea3e";
+}
+.icon-cheveron-up:before {
+  content: "\e912";
+}
+.icon-cheveron-down:before {
+  content: "\e911";
+}
