--- a/styles/icons/icons.css
+++ b/styles/icons/icons.css
@@ -56,7 +56,12 @@
   content: "\e908";
 }
 .icon-chevron-right:before {
-  content: "\e904";
+  content: "\e914";
+  color: #fff;
+}
+.icon-chevron-left:before {
+  content: "\e915";
+  color: #fff;
 }
 .icon-arrow-right:before {
   content: "\e905";
