--- a/styles/main.scss
+++ b/styles/main.scss
@@ -396,6 +396,16 @@ button:focus {
 
   .chart {
     overflow: auto;
+
+    .rv-discrete-color-legend-item {
+      margin-right: 10px;
+
+      .rv-discrete-color-legend-item__color {
+        margin-right: 10px;
+        height: 10px;
+        width: 10px;
+      }
+    }
   }
 }
 
