--- a/styles/main.scss
+++ b/styles/main.scss
@@ -231,24 +231,24 @@ input.text-white:focus, textarea.text-white:focus {
   &-dark {
     .btn-gradient-left {
       color: $white;
-      background: linear-gradient(to left, rgba(255,0,0,0), #292929);
+      background: linear-gradient(to left, rgba(255,0,0,0), #292929 60%);
     }
 
     .btn-gradient-right {
       color: $white;
-      background: linear-gradient(to right, rgba(255,0,0,0), #292929);
+      background: linear-gradient(to right, rgba(255,0,0,0), #292929 60%);
     }
   }
 
   &-light {
     .btn-gradient-left {
       color: $dark;
-      background: linear-gradient(to left, rgba(255,0,0,0), #ECEFF5);
+      background: linear-gradient(to left, rgba(255,0,0,0), #ECEFF5 60%);
     }
 
     .btn-gradient-right {
       color: $dark;
-      background: linear-gradient(to right, rgba(255,0,0,0), #ECEFF5);
+      background: linear-gradient(to right, rgba(255,0,0,0), #ECEFF5 60%);
     }
   }
 }
