--- a/styles/main.scss
+++ b/styles/main.scss
@@ -464,12 +464,14 @@ button:focus {
   @include media-breakpoint-down(sm) {
     .title {
       font-size: 30px;
+      font-weight: bold !important;
       background-color: transparent !important;
       margin-bottom: 40px !important;
     }
 
     .card-title {
       font-size: 14px;
+      line-height: 21px;
     }
   }
 }
