--- a/styles/main.scss
+++ b/styles/main.scss
@@ -430,7 +430,7 @@ button:focus {
   }
 }
 
-#__next-prerender-indicator {
+#__next-prerender-indicator, #__next-build-watcher {
   display: none;
 }
 
