--- a/styles/main.scss
+++ b/styles/main.scss
@@ -486,6 +486,7 @@ button:focus {
     .title {
       font-size: 30px;
       font-weight: bold !important;
+      letter-spacing: 0.25em;
       background-color: transparent !important;
       margin-bottom: 40px !important;
     }
