--- a/styles/main.scss
+++ b/styles/main.scss
@@ -350,6 +350,10 @@ button:focus {
     }
   }
 
+  .link {
+    text-align: center;
+  }
+
   .quote, .lead {
     .bg-secondary {
       background-color: #F4F6FA !important;
